# pms

./: Cargo.toml  README.md
sql/: 001_create_tables.sql  002_insert_dummy_data.sql
src/: errors.rs  lib.rs  main.rs
src/cli/: mod.rs
src/db/: doctor.rs  mod.rs  patient.rs  prescription.rs
src/domain/: doctor.rs  mod.rs  patient.rs  prescription.rs  refill.rs
