[package]
name = "pms"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = {version="4", features=["derive"]}
dialoguer = "0.11"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "mysql", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
